fixed navbar menu for planner page on mobile

--- a/public/stylesheets/h4z.css
+++ b/public/stylesheets/h4z.css
@@ -174,6 +174,10 @@ tags-input .host {
   height:100px;
 }
 
+.h4z-planner-wrapper {
+  overflow-x: auto;
+}
+
 .h4z-planner-titles {
   background-color: mintcream ;
   text-align:center;
